src/test/deca/syntax/invalid/HW/lparenthesisMissing.deca
// Description:
//    Programme minimaliste oubliant la parenthèse ouvrante
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022
{
        print"Hello");
}